User Christian Rupper
Date: Tue Jan 10 22:33:14 CET 2012

    Move objects before $LIBS to avoid link failures with --as-needed.
    Do not override CFLAGS for video test.
    Rearrange *FLAGS incl. some minor fixes.
    Don't override VDRDIR, LIBDIR and TMPDIR in makefile.
    Don't abuse LDFLAGS in makefile.
    Define CC in makefile.
    Include GL/gl.h for the GL_COLOR_BUFFER_BIT definition.
    VideoInit() needs an argument.

User johns
Date: Tue Jan 10 22:32:50 CET 2012

    Add main menu entry, which suspends the plugin.
    Add support for resize window.
    Close window sends "close" as remote key press.

Date: Mon Jan  9 22:09:38 CET 2012

    Release Version 0.3.0
    Add support of resolution dependend video parameters (deint, scale, ...).
    Add support for recording play back.
    Add workaround for alsa crash in snd_pcm_prepare.
    Fix bug: audio crash on exit.
    Fix build with vdr without yaepg support.
    Support yaepghd video picture output position change.

Date: Sat Jan  7 13:20:07 CET 2012

    Release Version 0.2.0
    Add support for ac3 audio pass through.
    Add workaround for alsa not playing hdmi sound.
    Fix bug: broken device plugin stop and exit.
    Show transparent cursor to hide cursor.
    VDPAU: Add color standard support.
    VDPAU: Add denoise and sharpness support.
    VDPAU: Add skip chroma deinterlace support.
    VDPAU: Show OSD only if something is to display, improves performance.
    VDPAU: Add deinterlace with only 4 surfaces.

Date: Thu Jan 4 17:00:00 CET 2012

    Release Version 0.1.5
    Adds OSS mixer support.
    Fix bug: audio new stream is not thread safe.
    New audio driver OSS.
    Fix bug: needed down sampling of 3/5/6 to 2 channels not reported.
    Search audio sync inside PES packets, for insane dvb streams.
    Use only the needed number of surfaces.

Date: Thu Dec 29 19:44:43 CET 2011

    Release Version 0.1.4
    Prepared vdpau noise reduction support.