@@ -1,3 +1,10 @@
+User johns
+Date:
+
+    Fix subtitle position.
+    Add SVDRP support.
+    Suspend when user is inactive.
+
 User Christian Rupper
 Date: Tue Jan 10 22:33:14 CET 2012
 
